- Fixed dialogs not closing in some situations
- Increase the number or required answers on feedback form
- Resolve backup and restore issues
- Fix Japanese translations not loading correctly


_Submitted to App Stores 2022-06-09_

For more details on this update please visit the "What is New" page in the Apps or on the website
