@@ -3,3 +3,5 @@ import '../../../contracts/redux/titleState.dart';
 
 List<String> getOwned(AppState state) =>
     state?.titleState?.owned ?? TitleState.initial().owned;
+bool getHideCompleted(AppState state) =>
+    state?.titleState?.hideCompleted ?? TitleState.initial().hideCompleted;
