@@ -2,7 +2,8 @@
 - Increase the number or required answers on feedback form
 - Resolve backup and restore issues
 - Fix Japanese translations not loading correctly
-
+- Display what creatures cooking items come from
+- Add option to hide already owned titles
 
 _Submitted to App Stores 2022-06-09_
 
